=======
CHANGES
=======

4.0.0 (unreleased)
------------------

- Replaced deprecated ``zope.interface.implements`` usage with equivalent
  ``zope.interface.implementer`` decorator.

- Dropped support for Python 2.4 and 2.5.


3.8.6 (2012-01-07)
------------------

- On startup, HTTPServer prints a clickable URL after the hostname/port.


3.8.5 (2011-09-13)
------------------

- fixed bug: requests lasting over 15 minutes were sometimes closed
  prematurely.

3.8.4 (2011-06-07)
------------------

- Fix syntax error in tests on Python < 2.6.


3.8.3 (2011-05-18)
------------------

- Made ``start_response`` method of WSGI server implementation more compliant
  with spec:

    http://www.python.org/dev/peps/pep-0333/#the-start-response-callable

3.8.2 (2010-12-04)
------------------

- Corrected license version in ``zope/server/http/tests/test_wsgiserver.py``.

3.8.1 (2010-08-24)
------------------

- When the result of a WSGI application was received, ``task.write()`` was
  only called once to transmit the data. This prohibited the transmission of
  partial results. Now the WSGI server iterates through the result itself
  making multiple ``task.write()`` calls, which will cause partial data to be
  transmitted.

- Created a second test case instance for the post-mortem WSGI server, so it
  is tested as well.

- Using python's ``doctest`` module instead of deprecated
  ``zope.testing.doctest``.

3.8.0 (2010-08-05)
------------------

- Implemented correct server proxy behavior. The HTTP server would always add
  a "Server" and "Date" response header to the list of response headers
  regardless whether one had been set already. The HTTP 1.1 spec specifies
  that a proxy server must not modify the "Server" and "Date" header but add a
  "Via" header instead.

3.7.0 (2010-08-01)
------------------

- Implemented proxy support. Proxy requests contain a full URIs and the
  request parser used to throw that information away. Using